# openrouter_api

./: Cargo.toml
src/: client.rs
src/api/: chat.rs
src/mcp/: client.rs
src/tests/: integration_tests.rs
src/types/: chat.rs  models.rs
